dh_install*: Accept missing files for packages not built
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,12 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_shlibdeps: Avoid forking a shell when calling file.
   * dh_shlibdeps: Avoid passing files with "newline" to
     subprocesses.
+  * dh_installdocs: Ignore missing files in compat 11 for packages
+    that are not processed (e.g. arch:all packages during a -B build).
+    Thanks to Jens Reyer for reporting the issue.  (Closes: #870892)
+  * dh_installexamples: Ditto.
+  * dh_installinfo: Ditto.
+  * dh_installman: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
