Avoid some unnecessary shells from qx
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,10 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_installexamples: Ditto.
   * dh_installinfo: Ditto.
   * dh_installman: Ditto.
+  * dh_compress: Avoid forking a shell for a find command.
+  * dh_gconf: Ditto.
+  * dh_installgsettings: Ditto.
+  * dh_perl: Avoid forking a shell for a dpkg call.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
