dh_gencontrol: dbgsyms are now priority optional
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_gconf: Ditto.
   * dh_installgsettings: Ditto.
   * dh_perl: Avoid forking a shell for a dpkg call.
+  * dh_gencontrol: Set the priority of all dbgsym packages to
+    optional to be compliant with Standards-Version 4.0.1.
+    Thanks to Mattia Rizzolo for the report.  (Closes: #870905)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
