Accept nodoc via DEB_BUILD_OPTIONS as well
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,13 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_gencontrol: Set the priority of all dbgsym packages to
     optional to be compliant with Standards-Version 4.0.1.
     Thanks to Mattia Rizzolo for the report.  (Closes: #870905)
+  * dh_installdocs: Accept "nodoc" via DEB_BUILD_OPTIONS as well.
+    Thanks to Sébastien Villemot for the suggestion.
+    (Closes: #866619)
+  * dh_installexamples: Ditto.
+  * dh_installinfo: Ditto.
+  * dh_installman: Ditto.
+  * dh_installwm: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
