--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_installinfo: Ditto.
   * dh_installman: Ditto.
   * dh_installwm: Ditto.
+  * debhelper.pod: Tweak text for some compat 11 changes.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
