dh_installdeb: Remove unnecessary version dpkg Pre-Depends
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,9 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_installman: Ditto.
   * dh_installwm: Ditto.
   * debhelper.pod: Tweak text for some compat 11 changes.
+  * dh_installdeb: Stop emitting versioned Pre-Depends on dpkg for
+    symlink_to_dir and dir_to_symlink maintscripts.  The version
+    requirements are satisfied in oldoldstable.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
