dh_installdocs: Merge two doit('chmod',...) calls
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
   * dh_installdeb: Stop emitting versioned Pre-Depends on dpkg for
     symlink_to_dir and dir_to_symlink maintscripts.  The version
     requirements are satisfied in oldoldstable.
+  * dh_installdocs: Merge two chmod calls to save a fork+exec.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
 
