--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (10.7.3) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Dh_Lib: Introduce a qx_cmd sub to behave like a mix of qx
     and doit (i.e. avoid the shell while capturing stdout).
   * dh_makeshlibs: Avoid forking a shell when calling objdump in
@@ -54,6 +55,10 @@ debhelper (10.7.1) unstable; urgency=medium
     configure as several packages implicitly assume that are not
     expanded.  E.g. liblockfile relies on ${prefix} being
     unexpanded for DESTDIR to work.  Reopens: #813266
+
+  [ Adam Conrad ]
+  * dh_gencontrol: Change the synopsis of dbgsym packages so it
+    follows best practises.  (Closes: #872274)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 31 Jul 2017 19:00:45 +0000
 
