--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.7.2~bpo9+1) stretch-backports; urgency=medium
+
+  * Non-maintainer upload on behalf of maintainer:
+    Rebuild for stretch-backports (Closes: #873633).
+
+ -- W. Martin Borgert <debacle@debian.org>  Wed, 30 Aug 2017 20:12:47 +0000
+
 debhelper (10.7.2) unstable; urgency=medium
 
   * Dh_Lib: Fix inverted boolean logic that causes a
