dh_update_autotools_config: Improve detection for very old files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,10 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
     auto-detection can be overrules with the new --doc-main-package.
     (Closes: #824221)
   * dh_installexamples: Ditto.
+  * dh_update_autotools_config: Improve detection to also catch very
+    old versions of config.{guess,sub} that do not have the
+    "timestamp" variable.  Thanks to Guillem Jover for reporting the
+    bug.  (Closes: #872510)
 
   [ Adam Conrad ]
   * dh_gencontrol: Change the synopsis of dbgsym packages so it
