--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.7.3) UNRELEASED; urgency=medium
+debhelper (10.8) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Dh_Lib: Introduce a qx_cmd sub to behave like a mix of qx
@@ -38,7 +38,7 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
     Helmut Grohne for reporting the issue.  (Closes: #872007)
   * dh_installdocs: Auto-detect "main package" for documentation
     packages in compat 11 to assist with Debian policy §12.3.  This
-    auto-detection can be overrules with the new --doc-main-package.
+    auto-detection can be overruled with the new --doc-main-package.
     (Closes: #824221)
   * dh_installexamples: Ditto.
   * dh_update_autotools_config: Improve detection to also catch very
@@ -55,7 +55,7 @@ debhelper (10.7.3) UNRELEASED; urgency=medium
     moving the Debian (perl package) to the lib subdirectory.
     (Closes: #873043)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:07:38 +0000
 
 debhelper (10.7.2) unstable; urgency=medium
 
