debhelper.pod: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -706,7 +706,7 @@ command and fail with a "command not found" error.
 =item -
 
 The B<dh_makeshlibs> helper will now exit with an error if objdump
-returns failure code from analysing objdump.
+returns a non-zero exit from analysing a given file.
 
 =item -
 
