--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.9) UNRELEASED; urgency=medium
+
+  * debhelper.pod: Fix typo.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000
+
 debhelper (10.8) unstable; urgency=medium
 
   [ Niels Thykier ]
