dh_fixperms: Reset .scss and .sass to 0644
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 debhelper (10.9) UNRELEASED; urgency=medium
 
   * debhelper.pod: Fix typo.
+  * dh_fixperms: Reset permissions of .scss and .sass files to
+    0644.  Thanks to Jonas Smedegaard for the suggestion.
+    (Closes: #875586)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000
 
