--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (10.9) UNRELEASED; urgency=medium
     determine whether files are ELF binaries worth processing
     instead of using filenames/extensions.  (Closes: #35733)
   * dh_shlibdeps: Ditto.
+  * d/control: Bump Standards-Versions to 4.1.0.  No changes
+    required.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000
 
