d/changelog: Add changelog entry for Felipe Sateler's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (10.9) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * debhelper.pod: Fix typo.
   * dh_fixperms: Reset permissions of .scss and .sass files to
     0644.  Thanks to Jonas Smedegaard for the suggestion.
@@ -11,6 +12,10 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * dh_shlibdeps: Ditto.
   * d/control: Bump Standards-Versions to 4.1.0.  No changes
     required.
+
+  [ Felipe Sateler ]
+  * dh_systemd_enable: Refactor and add support for timer units.
+    (Closes: #841746)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000
 
