debhelper.7: Tweak wording of a beta-tester caveat
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -773,8 +773,10 @@ compat level.
 =item *
 
 The "beta-tester" compatibility version in unstable and testing will
-often be different than the one in stable-backports.  Accordingly, it
-is not recommended for packages being backported regularly.
+often be different than the one in stable.  Accordingly, it is not
+recommended for packages being backported regularly.  Alternatively,
+please be sure to add explicit versioned Build-Depends on debhelper,
+so you get exactly the compatability version you expect.
 
 =item *
 
