dh_makeshlibs: Avoid warning about missing d/<pkg> dir
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * dh_shlibdeps: Ditto.
   * d/control: Bump Standards-Versions to 4.1.0.  No changes
     required.
+  * dh_makeshlibs: Avoid gratious warning about a non-existing
+    directory, when the packaging directory does not exist.
+    (Closes: #626685)
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
