dh_gencontrol: Undef Important field in dbgsym packages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * dh_makeshlibs: Avoid gratious warning about a non-existing
     directory, when the packaging directory does not exist.
     (Closes: #626685)
+  * dh_gencontrol: Ensure that dbgsym packages do not inherit the
+    "Important" field.
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
