dh_installinfo: Merge two chmod calls into one
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ debhelper (10.9) UNRELEASED; urgency=medium
     (Closes: #626685)
   * dh_gencontrol: Ensure that dbgsym packages do not inherit the
     "Important" field.
+  * dh_installinfo: Merge two chmod calls into one to save a
+    fork+exec.
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
