dh_builddeb: Bump udeb compression to -z6
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ debhelper (10.9) UNRELEASED; urgency=medium
     "Important" field.
   * dh_installinfo: Merge two chmod calls into one to save a
     fork+exec.
+  * dh_builddeb: Use -z6 compression for udebs (up from -z1).
+    Thanks to Adrian Bunk for the suggestion and Aurelien Jarno
+    for confirming it would be fine for d-i.  (Closes: #870201)
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
