dh_fixperms: Reset nodejs {cli,bin}.js to 0755
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * dh_builddeb: Use -z6 compression for udebs (up from -z1).
     Thanks to Adrian Bunk for the suggestion and Aurelien Jarno
     for confirming it would be fine for d-i.  (Closes: #870201)
+  * dh_fixperms: Set the permissions of /usr/lib/nodejs/*/{cli,bin}.js
+    to 0755.  Thanks to Pirate Praveen for the report.
+    (Closes: #840913)
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
