--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.8~bpo9+1) stretch-backports; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 17 Sep 2017 13:42:44 +0000
+
 debhelper (10.8) unstable; urgency=medium
 
   [ Niels Thykier ]
