--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,8 @@ debhelper (10.9) UNRELEASED; urgency=medium
     determine whether files are ELF binaries worth processing
     instead of using filenames/extensions.  (Closes: #35733)
   * dh_shlibdeps: Ditto.
-  * d/control: Bump Standards-Versions to 4.1.0.  No changes
-    required.
+  * d/control: Bump Standards-Versions to 4.1.0:
+    - Bump priority of dh-systemd to "optional".
   * dh_makeshlibs: Avoid gratious warning about a non-existing
     directory, when the packaging directory does not exist.
     (Closes: #626685)
