debhelper.7: Fix typo reported by lintian
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * Dh_Getopt.pm: Validate package names passed via -p and -N to ensure
     they are present in d/control.  Thanks to Matthias Klose for the
     report.  (Closes: #795432)
+  * debhelper.7: Fix typo of compatibility.
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
