--- a/debhelper.pod
+++ b/debhelper.pod
@@ -776,7 +776,7 @@ The "beta-tester" compatibility version in unstable and testing will
 often be different than the one in stable.  Accordingly, it is not
 recommended for packages being backported regularly.  Alternatively,
 please be sure to add explicit versioned Build-Depends on debhelper,
-so you get exactly the compatability version you expect.
+so you get exactly the compatibility version you expect.
 
 =item *
 
