--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.9) UNRELEASED; urgency=medium
+debhelper (10.9) unstable; urgency=medium
 
   [ Niels Thykier ]
   * debhelper.pod: Fix typo.
@@ -36,7 +36,7 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * dh_systemd_enable: Refactor and add support for timer units.
     (Closes: #841746)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 19 Sep 2017 18:49:57 +0000
 
 debhelper (10.8) unstable; urgency=medium
 
