--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.9.1) UNRELEASED; urgency=medium
+
+  * dh_builddeb: Add some missing error checks.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 21 Sep 2017 19:13:19 +0000
+
 debhelper (10.9) unstable; urgency=medium
 
   [ Niels Thykier ]
