--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 debhelper (10.9.1) UNRELEASED; urgency=medium
 
   * dh_builddeb: Add some missing error checks.
+  * Dh_Lib.pm: Fix bug where debhelper could shallow some error
+    messages during parsing when -O options were passed via
+    DH_OPTIONS (among other).  Thanks to Adrian Bunk and
+    Andrew Shadura for reporting the issue.  (Closes: #876689)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 21 Sep 2017 19:13:19 +0000
 
