d/changelog: Fix typo in changelog
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (10.9.1) UNRELEASED; urgency=medium
 
   * dh_builddeb: Add some missing error checks.
-  * Dh_Lib.pm: Fix bug where debhelper could shallow some error
+  * Dh_Lib.pm: Fix bug where debhelper could discard some error
     messages during parsing when -O options were passed via
     DH_OPTIONS (among other).  Thanks to Adrian Bunk and
     Andrew Shadura for reporting the issue.  (Closes: #876689)
