d/changelog: Document Dmitry's qmake cross-build changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (10.9.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_builddeb: Add some missing error checks.
   * Dh_Lib.pm: Fix bug where debhelper could discard some error
     messages during parsing when -O options were passed via
@@ -10,6 +11,9 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   * debhelper.7: Document how package selections interact with
     Build-Profiles.  Thanks to Helmut Grohne for the report.
     (Closes: #872745)
+
+  [ Dmitry Shachnev ]
+  * qmake.pm: Add basic cross-building support.  (Closes: #877357)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 21 Sep 2017 19:13:19 +0000
 
