dh_systemd_start: Regex escape paths used in regex
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   * dh_installdocs: Validate that the package passed to
     --doc-main-package are listed in debian/control.
   * dh_installexamples: Ditto.
+  * dh_systemd_start: Regex escape two paths used in a regex.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
