dh_systemd_enable: Fix regression in installation of template units
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,9 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
     until compat 12.
   * Dh_Lib: Defer making the "shell-spawning bug" in doit an error
     until compat 12.
+  * dh_systemd_enable: Fix regression in debhelper/10.9 where
+    template units would be installed as regular units (and
+    possibly replace regular units).
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
