dh_systemd_enable: Drop now unnecessary init-system-helpers dependency
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   * dh_systemd_enable: Fix regression in debhelper/10.9 where
     template units would be installed as regular units (and
     possibly replace regular units).
+  * dh_systemd_enable: Drop versioned dependency on
+    init-system-helpers that is satisfied in oldstable.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
