Dh_Lib: Fix regression of --no-act
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
     possibly replace regular units).
   * dh_systemd_enable: Drop versioned dependency on
     init-system-helpers that is satisfied in oldstable.
+  * Dh_Lib: Fix regression where --no-act would actually create
+    maintscript snippets.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
