--- a/debian/changelog
+++ b/debian/changelog
@@ -24,7 +24,7 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
     until compat 12.
   * dh_systemd_enable: Fix regression in debhelper/10.9 where
     template units would be installed as regular units (and
-    possibly replace regular units).
+    possibly replace regular units).  (Closes: #877989)
   * dh_systemd_enable: Drop versioned dependency on
     init-system-helpers that is satisfied in oldstable.
   * Dh_Lib: Fix regression where --no-act would actually create
