t: Add tests for dh_systemd_*
These are based heavily on the tests written by Felipe Sateler for
dh_installsystemd.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   * dh_systemd_*: If an unit file cannot be read (e.g. to check for
     the [Install] section), error out instead of emitting a warning
     and continuing.
+  * t: Add tests for dh_systemd_* based on WIP tests from Felipe
+    Sateler related to a new dh_installsystemd helper.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
