--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   * meson.pm: Add prototype support for cross building by relying
     on /usr/share/meson/debcrossgen.  Note that this is currently
     not functional due to #875703.
+  * debian/control: Bump Standards-Versions to 4.1.1 - No changes
+    required.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
