--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.9.1) UNRELEASED; urgency=medium
+debhelper (10.9.1) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_builddeb: Add some missing error checks.
@@ -47,7 +47,7 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 21 Sep 2017 19:13:19 +0000
+ -- Niels Thykier <niels@thykier.net>  Tue, 10 Oct 2017 19:01:00 +0000
 
 debhelper (10.9) unstable; urgency=medium
 
