--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.9.2) UNRELEASED; urgency=medium
+
+  * dh_install: Defer the removal of --list-missing and
+    --fail-missing until compat 12.
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000
+
 debhelper (10.9.1) unstable; urgency=medium
 
   [ Niels Thykier ]
