qmake.pm: Remove -nocache parameter
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 debhelper (10.9.2) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_install: Defer the removal of --list-missing and
     --fail-missing until compat 12.
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * qmake.pm: Remove unnecessary "-nocache" parameter.
+    (Closes: #878427, LP: #1206234)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000
 
