--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (10.9.2) UNRELEASED; urgency=medium
   [ Niels Thykier ]
   * dh_install: Defer the removal of --list-missing and
     --fail-missing until compat 12.
+  * dh: Run the new dh_installsystemd helper by default in compat 11.
+  * systemd.pm: Remove the sequence in compat 11.  It has been replaced
+    by the new dh_installsystemd helper.
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * qmake.pm: Remove unnecessary "-nocache" parameter.
@@ -10,6 +13,20 @@ debhelper (10.9.2) UNRELEASED; urgency=medium
 
   [ Ville Skyttä ]
   * Fix a number of spelling mistakes.  (Closes: #878325)
+
+  [ Felipe Sateler ]
+  * dh_installsystemd: New command (currently only active in
+    under compat 11).  This new helper:
+    - Generates postinst code for tmpfiles (now that dh_installinit
+      does not).
+    - Follows the naming convention for other built-in dh_* commands.
+    - Replaces dh_systemd_enable and dh_systemd_start in compat 11
+      and later.
+    - Only acts on units with the name specified by "--name" when this
+      option is given.
+    (Closes: #752521, #857306, #870768, #876486)
+  * dh_systemd_enable: Remove as obsolete in compat 11.
+  * dh_systemd_start: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000
 
