d/changelog: Improve wording of an entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,8 @@ debhelper (10.9.2) UNRELEASED; urgency=medium
   * Fix a number of spelling mistakes.  (Closes: #878325)
 
   [ Felipe Sateler ]
-  * dh_installsystemd: New command (currently only active in
-    under compat 11).  This new helper:
+  * dh_installsystemd: New command (currently noop except when used in
+    the experimental compat 11).  This new helper:
     - Generates postinst code for tmpfiles (now that dh_installinit
       does not).
     - Follows the naming convention for other built-in dh_* commands.
