--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,10 @@ debhelper (10.9.2) UNRELEASED; urgency=medium
   * dh_systemd_enable: Remove as obsolete in compat 11.
   * dh_systemd_start: Ditto.
 
+  [ Helmut Grohne ]
+  * cmake.pm: Also supply PKGCONFIG_EXECUTABLE for obsolete
+    UsePkgConfig.cmake.  (Closes: #878460)
+
  -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000
 
 debhelper (10.9.1) unstable; urgency=medium
