--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.9.2) UNRELEASED; urgency=medium
+debhelper (10.9.2) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_install: Defer the removal of --list-missing and
@@ -32,7 +32,7 @@ debhelper (10.9.2) UNRELEASED; urgency=medium
   * cmake.pm: Also supply PKGCONFIG_EXECUTABLE for obsolete
     UsePkgConfig.cmake.  (Closes: #878460)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 11 Oct 2017 05:32:09 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 07:19:38 +0000
 
 debhelper (10.9.1) unstable; urgency=medium
 
