Include $! in error messages
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (10.9.3) UNRELEASED; urgency=medium
+
+  * dh_installsystemd: Improve error messages to include the actual
+    error caused by attempted to open the file.
+  * dh_systemd_enable: Ditto.
+  * dh_systemd_start: Ditto.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
+
 debhelper (10.9.2) unstable; urgency=medium
 
   [ Niels Thykier ]
