dh_installinit: Reject upstart init files [c12]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (10.9.3) UNRELEASED; urgency=medium
     error caused by attempted to open the file.
   * dh_systemd_enable: Ditto.
   * dh_systemd_start: Ditto.
+  * dh_installinit: In compat 12, error out if an upstart init file
+    is provided with a reminder message about how to remove the
+    obsolete conffile.  (Closes: #876453)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
 
