dh_builddeb: Pass --root-owner-group to dpkg-deb under R³
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ debhelper (10.9.3) UNRELEASED; urgency=medium
   * dh_testroot: Update check for root to support R³.
   * makefile.pm: Call "make install" with DPKG_GAIN_ROOT_CMD when
     R³ contains the "debhelper/upstream-make-install" keyword.
+  * dh_builddeb: Pass --root-owner-group to dpkg-deb in packages
+    with R³ (except for "binary-targets").
 
  -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
 
