d/control: Set R³ to "no"
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,9 @@ debhelper (10.9.3) UNRELEASED; urgency=medium
   * dh_usrlocal: When R³ is enabled (and not "binary-targets"),
     ignore the ownership/mode information on the directories.
     Instead, the ownership "root:staff" and the mode 02775 is used.
+  * d/control: Bump (Build-)Dependency on dpkg-dev to support to
+    support R³.
+  * d/control: Set R³ to "no".
 
  -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
 
