--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.9.2~bpo9+1) stretch-backports; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 19 Oct 2017 05:25:11 +0000
+
 debhelper (10.9.2) unstable; urgency=medium
 
   [ Niels Thykier ]
