dh_systemd_*: Fix incorrect error for "missing" files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ debhelper (10.9.3) UNRELEASED; urgency=medium
   * dh_installinit: In compat 12, error out if an upstart init file
     is provided with a reminder message about how to remove the
     obsolete conffile.  (Closes: #876453)
+  * dh_systemd_enable: Permit missing explicitly requested file in
+    package as long as another on being acted on ships it.
+    (Closes: #878911)
+  * dh_systemd_start: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
 
