--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.9.3) UNRELEASED; urgency=medium
+debhelper (10.10) unstable; urgency=medium
 
   * dh_installsystemd: Improve error messages to include the actual
     error caused by attempted to open the file.
@@ -30,7 +30,7 @@ debhelper (10.9.3) UNRELEASED; urgency=medium
     support R³.
   * d/control: Set R³ to "no".
 
- -- Niels Thykier <niels@thykier.net>  Sat, 14 Oct 2017 11:18:19 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 21 Oct 2017 17:59:46 +0000
 
 debhelper (10.9.2) unstable; urgency=medium
 
