Document directory requirement for all debhelper tools
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -28,6 +28,11 @@ package, which contains a L<dh_make|dh_make(1)> command that partially
 automates the process. For a more gentle introduction, the B<maint-guide> Debian 
 package contains a tutorial about making your first package using debhelper.
 
+Except where tool explicitly denotes otherwise, all of the debhelper
+tools assumes that they run from root directory of an unpacked source
+package.  This is so they can locate find F<debian/control> and
+F<debian/compat> when needed.
+
 =head1 DEBHELPER COMMANDS
 
 Here is the list of debhelper commands you can use. See their man
