--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (10.11) UNRELEASED; urgency=medium
+
+  * debhelper.pod: Document that all tools by default must be run
+    in the root of an unpacked source.
+  * dh: Clarify that --list can be run anywhere.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 08:04:11 +0000
+
 debhelper (10.10) unstable; urgency=medium
 
   * dh_installsystemd: Improve error messages to include the actual
