dh_testroot: Temporarily cope with being run outside a source root
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (10.11) UNRELEASED; urgency=medium
   * debhelper.pod: Document that all tools by default must be run
     in the root of an unpacked source.
   * dh: Clarify that --list can be run anywhere.
+  * dh_testroot: Temporarily cope with being run outside a source
+    root.  (Closes: #879478)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 08:04:11 +0000
 
