dh_testroot: Document behaviour under R³
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (10.11) UNRELEASED; urgency=medium
   * dh: Clarify that --list can be run anywhere.
   * dh_testroot: Temporarily cope with being run outside a source
     root.  (Closes: #879478)
+  * dh_testroot: Update manpage to mention its new scope.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 08:04:11 +0000
 
