d/control: Bump relations on dpkg
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (10.11) UNRELEASED; urgency=medium
   * dh_testroot: Temporarily cope with being run outside a source
     root.  (Closes: #879478)
   * dh_testroot: Update manpage to mention its new scope.
+  * d/control: Bump (build-)dependency on dpkg to 1.19.0.3~.  That
+    was technically necessary already in the previous upload.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 08:04:11 +0000
 
