--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.11) UNRELEASED; urgency=medium
+debhelper (10.10.1) unstable; urgency=medium
 
   * debhelper.pod: Document that all tools by default must be run
     in the root of an unpacked source.
@@ -9,7 +9,7 @@ debhelper (10.11) UNRELEASED; urgency=medium
   * d/control: Bump (build-)dependency on dpkg to 1.19.0.3~.  That
     was technically necessary already in the previous upload.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 08:04:11 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 09:00:12 +0000
 
 debhelper (10.10) unstable; urgency=medium
 
