--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (10.10.2) UNRELEASED; urgency=medium
+debhelper (10.10.2) unstable; urgency=medium
 
   * Dh_Lib: Fix uninitialized warning in find_hardlinks that
     broke dh_compress's ability to deal with hardlinks.  Thanks
     to Ondřej Surý for finding the bug.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 21:14:46 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 22 Oct 2017 21:21:58 +0000
 
 debhelper (10.10.1) unstable; urgency=medium
 
