dh_strip: Improve the --exclude speed
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.10.3) UNRELEASED; urgency=medium
+
+  * dh_strip: Skip the entire directoru when an exclude rule
+    parameter matches it.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 06:14:30 +0000
+
 debhelper (10.10.2) unstable; urgency=medium
 
   * Dh_Lib: Fix uninitialized warning in find_hardlinks that
