dh_{fixperms,usrlocal}: Assume less familarity with R³
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
 debhelper (10.10.3) UNRELEASED; urgency=medium
 
-  * dh_strip: Skip the entire directoru when an exclude rule
+  * dh_strip: Skip the entire directory when an exclude rule
     parameter matches it.
+  * dh_fixperms: Improve the documentation to assume less familarity
+    with "Rules-Requires-Root" (R³).
+  * dh_usrlocal: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 06:14:30 +0000
 
