dh_builddeb: Assume less familarity with R³
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (10.10.3) UNRELEASED; urgency=medium
   * dh_fixperms: Improve the documentation to assume less familarity
     with "Rules-Requires-Root" (R³).
   * dh_usrlocal: Ditto.
+  * dh_builddeb: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 06:14:30 +0000
 
