dh_usrlocal: Fix incorrect group name
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (10.10.3) UNRELEASED; urgency=medium
     with "Rules-Requires-Root" (R³).
   * dh_usrlocal: Ditto.
   * dh_builddeb: Ditto.
+  * dh_usrlocal: Correct the group name when creating directories
+    owned by "root:staff".  Thanks to Paul Gevers for reporting
+    the bug.  (Closes: #879643)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 06:14:30 +0000
 
