dh_usrlocal: Fix inverted boolean logic
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ debhelper (10.10.3) UNRELEASED; urgency=medium
   * dh_usrlocal: Correct the group name when creating directories
     owned by "root:staff".  Thanks to Paul Gevers for reporting
     the bug.  (Closes: #879643)
+  * dh_usrlocal: Fix inverted boolean logic that made dh_usrlocal
+    ignore ownership of directories when it should have preserved
+    them.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 06:14:30 +0000
 
