--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.3) UNRELEASED; urgency=medium
+debhelper (10.10.3) unstable; urgency=medium
 
   * dh_strip: Skip the entire directory when an exclude rule
     parameter matches it.
@@ -13,7 +13,7 @@ debhelper (10.10.3) UNRELEASED; urgency=medium
     ignore ownership of directories when it should have preserved
     them.
 
- -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 06:14:30 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 23 Oct 2017 21:24:08 +0000
 
 debhelper (10.10.2) unstable; urgency=medium
 
