meson.pm: Keep cross file until dh_clean time
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (10.10.4) UNRELEASED; urgency=medium
+
+  * meson.pm: Keep the meson cross file until dh_clean is
+    called as otherwise ninja tries and fails to regenerate the
+    build rules.  Thanks to Helmut Grohne for reporting the
+    bug.  (Closes: #879658)
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 24 Oct 2017 05:45:09 +0000
+
 debhelper (10.10.3) unstable; urgency=medium
 
   * dh_strip: Skip the entire directory when an exclude rule
