--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ debhelper (10.10.4) UNRELEASED; urgency=medium
     dh_strip (as dh_strip compresses the debug symbols and dwz
     expects uncompressed debug symbols).  (Closes: #878888)
   * dwz.pm: New sequence to add dh_dwz to the sequence.
+  * d/control: Add a Suggets on dwz for the optional dh_dwz tool.
 
  -- Niels Thykier <niels@thykier.net>  Tue, 24 Oct 2017 05:45:09 +0000
 
