--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.10.4) UNRELEASED; urgency=medium
+debhelper (10.10.4) unstable; urgency=medium
 
   * meson.pm: Keep the meson cross file until dh_clean is
     called as otherwise ninja tries and fails to regenerate the
@@ -15,7 +15,7 @@ debhelper (10.10.4) UNRELEASED; urgency=medium
     incorrect value in the Section field.  Thanks to Mihai
     Moldovan for reporting the issue.  (Closes: #879667)
 
- -- Niels Thykier <niels@thykier.net>  Tue, 24 Oct 2017 05:45:09 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 25 Oct 2017 06:00:13 +0000
 
 debhelper (10.10.3) unstable; urgency=medium
 
