meson.pm: Add missing import of generating_file
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.10.5) UNRELEASED; urgency=medium
+
+  * meson.pm: Add missing import of generated_file that broke
+    cross building.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 26 Oct 2017 17:46:14 +0000
+
 debhelper (10.10.4) unstable; urgency=medium
 
   * meson.pm: Keep the meson cross file until dh_clean is
