Dh_Lib: Fix parse error for empty line before source paragraph
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (10.10.5) UNRELEASED; urgency=medium
 
   * meson.pm: Add missing import of generated_file that broke
     cross building.
+  * Dh_Lib: Fix regression where an empty line before the source
+    paragraph in d/control would cause parse error.
+    (Closes: #879762)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 26 Oct 2017 17:46:14 +0000
 
